Fix menu button in titlebar (#108)
- Fix invisible menu button in the titlebar
- Modify active accent colours

--- a/gtk/src/default/gtk-3.0/sass/tweak-apps/_tweak-common.scss
+++ b/gtk/src/default/gtk-3.0/sass/tweak-apps/_tweak-common.scss
@@ -158,6 +158,8 @@ headerbar.selection-mode {
     @extend .image-button;
 
     @include button(undecorated);
+    background-color: if($variant=='light', lighten($selected_bg_color, 10%), darken($selected_bg_color, 10%));
+    color: $text_color;
 
     &:hover {
       @include button(header-hover);
